Project

General

Profile

Actions

Bug #20866

closed

rgw: crash in system_obj_set_attrs when got SIGHUP

Added by fang yuxiang over 6 years ago. Updated over 2 years ago.

Status:
Closed
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
2 - major
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

backtrace:

1: (()+0x66284a) [0x7f30c1a9b84a]
2: (()+0xf100) [0x7f30c0db6100]
3: (gsignal()+0x37) [0x7f30c00f15f7]
4: (abort()+0x148) [0x7f30c00f2ce8]
5: (_gnu_cxx::_verbose_terminate_handler()+0x165) [0x7f30c06f39d5]
6: (()+0x5e946) [0x7f30c06f1946]
7: (()+0x5e973) [0x7f30c06f1973]
8: (__cxa_rethrow()+0x49) [0x7f30c06f1be9]
9: (std::_Rb_tree_node<std::pair<std::string const, ceph::buffer::list> >* std::_Rb_tree<std::string, std::pair<std::string const, ceph::buffer::list>, std::_Select1st<std::pair<std::string const, ceph::buffer::list> >, std::less<std::string>, std::allocator<std::pair<std::string const, ceph::buffer::list> > >::_M_create_node<std::pair<std::string const, ceph::buffer::list> const&>(std::pair<std::string const, ceph::buffer::list> const&)+0xae) [0x7f30c17a718e]
10: (std::_Rb_tree<std::string, std::pair<std::string const, ceph::buffer::list>, std::_Select1st<std::pair<std::string const, ceph::buffer::list> >, std::less<std::string>, std::allocator<std::pair<std::string const, ceph::buffer::list> > >::_M_copy(std::_Rb_tree_node<std::pair<std::string const, ceph::buffer::list> > const*, std::_Rb_tree_node<std::pair<std::string const, ceph::buffer::list> >)+0x2e) [0x7f30c17a71de]
11: (std::_Rb_tree<std::string, std::pair<std::string const, ceph::buffer::list>, std::_Select1st<std::pair<std::string const, ceph::buffer::list> >, std::less<std::string>, std::allocator<std::pair<std::string const, ceph::buffer::list> > >::operator=(std::_Rb_tree<std::string, std::pair<std::string const, ceph::buffer::list>, std::_Select1st<std::pair<std::string const, ceph::buffer::list> >, std::less<std::string>, std::allocator<std::pair<std::string const, ceph::buffer::list> > > const&)+0x47) [0x7f30c17c8d07]
12: (RGWCache<RGWRados>::system_obj_set_attrs(void
, rgw_raw_obj&, std::map<std::string, ceph::buffer::list, std::less<std::string>, std::allocator<std::pair<std::string const, ceph::buffer::list> > >&, std::map<std::string, ceph::buffer::list, std::less<std::string>, std::allocator<std::pair<std::string const, ceph::buffer::list> > >, RGWObjVersionTracker)+0x152) [0x7f30c19533f2]
13: (RGWAsyncRadosProcessor::handle_request(RGWAsyncRadosRequest*)+0x22) [0x7f30c1799d52]
14: (RGWAsyncRadosProcessor::RGWWQ::_process(RGWAsyncRadosRequest*, ThreadPool::TPHandle&)+0xd) [0x7f30c1799e1d]
15: (ThreadPool::worker(ThreadPool::WorkThread*)+0xa7e) [0x7f30c1c7b3be]
16: (ThreadPool::WorkThread::entry()+0x10) [0x7f30c1c7c2a0]
17: (()+0x7dc5) [0x7f30c0daedc5]
18: (clone()+0x6d) [0x7f30c01b228d]

Related issues 1 (0 open1 closed)

Related to rgw - Bug #20763: Radosgw hangs after a few hoursClosedMatt Benjamin

Actions
Actions #2

Updated by Radoslaw Zarzynski over 6 years ago

  • Related to Bug #20763: Radosgw hangs after a few hours added
Actions #3

Updated by Orit Wasserman over 6 years ago

  • Status changed from New to Fix Under Review
Actions #4

Updated by Martin Emrich over 6 years ago

Just tried it with Ceph 12.2.2, the issue is still present. Workaround is to not SIGHUP the radosgw process during logrotate.

Actions #5

Updated by Amine Liu about 6 years ago

Martin Emrich wrote:

Just tried it with Ceph 12.2.2, the issue is still present. Workaround is to not SIGHUP the radosgw process during logrotate.

I had this problem with ceph 12.2.2, too.

Actions #6

Updated by Casey Bodley over 2 years ago

  • Status changed from Fix Under Review to Closed
Actions

Also available in: Atom PDF