rgw: fix crash in system_obj_set_attrs when got SIGHUP

Fixes: http://tracker.ceph.com/issues/20866

Signed-off-by: fang yuxiang fang.yuxiang@eisoo.com